@@ -1,5 +1,6 @@
 Changes for 1.8.9rc1
 
+ - [ZBX-4265] fixed host input validation (pavels)
  - [ZBX-4264] fixed zabbix_agent compilation problem on HP-UX (dimir)
  - [ZBX-3504] added a text notification in the maps section when no maps are defined (pavels)
  - [ZBX-3749] escaped HTML entities in the web step "required" field (pavels)
